--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>UoitExperts</title>
+  <title>UOIT Experts</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://shared.uoit.ca/global-2.1/dist/css/uoit.css" rel="stylesheet" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
