🚿 Rename main module to reflect whole app and improve awkward load

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <expert-centre>
+  	<h1><small class="subtitle">Loading Expert Centre...</small></h1>
+  </expert-centre>
 </body>
 </html>
